# backend/docs/swagger/swagger.yaml
@@ -74,6 +74,12 @@ definitions:
         example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiJncmFjZS5ob3BwZXIifQ.brewbrewbrew
         type: string
     type: object
+  github_com_MateWorkspace_mate-things_backend_internal_presentation_http_request.FirmwareDeleteRequest:
+    properties:
+      expected_name:
+        example: espresso-fw
+        type: string
+    type: object
   github_com_MateWorkspace_mate-things_backend_internal_presentation_http_request.FirmwarePatchRequest:
     properties:
       name:
@@ -2795,6 +2801,12 @@ paths:
         name: id
         required: true
         type: string
+      - description: request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_MateWorkspace_mate-things_backend_internal_presentation_http_request.FirmwareDeleteRequest'
       produces:
       - application/json
       responses:
