# backend/internal/presentation/http/request/node.go
@@ -27,6 +27,10 @@ type FirmwarePatchRequest struct {
 	Name        *string `json:"name" example:"espresso-fw"`
 }
 
+type FirmwareDeleteRequest struct {
+	ExpectedName string `json:"expected_name" example:"espresso-fw"`
+}
+
 type OtaDispatchRequest struct {
 	FirmwareId  string `json:"firmware_id" example:"9c4e2b7a-1f3d-4a6c-8b5e-2d7f9a1c3e08"`
 	FirmwareUrl string `json:"firmware_url" example:"https://cdn.mate-things.internal/firmwares/espresso-fw/v3/firmware.bin"`
